<resources>
    <string name="app_name">Monopoly Klagenfurt</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_connection_view">ConnectionView</string>
    <string name="title_activity_view">view</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_not_connected">Not connected</string>
    <string name="error_enter_game_id">Enter a Game ID first</string>
    <string name="hint_player_name">Player name</string>
    <string name="default_player_name">Player1</string>
    <string name="hint_game_id">Game ID (auto-filled on create)</string>
    <string name="label_action">Action:</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_send">Send</string>
    <string name="btn_clear">Clear</string>
    <string name="label_events">Game Events (JSON):</string>
    <string name="gameboard">Gameboard</string>
    <string name="player_name">Player Name</string>
    <string name="game_id">Game ID</string>
</resources>